Make instructional text for image stronger

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="text" id="company" name="company" required>
 
             <label for="headshot">Headshot:</label>
-            <small>Please upload your LinkedIn profile image, or a square image file so that the image does not stretch.</small>
+            <p class="headshot-instruction">Please upload your LinkedIn profile image, or an image file with <strong>square dimensions</strong> so that the image does not stretch.</p>
             <input type="file" id="headshot" name="headshot" accept="image/*" required>
 
             <label>Select Background:</label>
